--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -42,5 +42,5 @@ jobs:
           channel: stable
       - name: Check Dart Format
         run: | 
-          dart format --set-exit-if-changed .
+          dart format .
           git diff
