Try something cheeky

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -45,4 +45,5 @@ jobs:
           dart --version
           flutter --version
           dart format .
-          git diff
+          git checkout -b formatted
+          git push -u origin formatted
