Try and push changes again

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -47,5 +47,7 @@ jobs:
           dart format .
           git checkout -b formatted
           git add .
+          git config user.email runner-test@github.com
+          git config user.name runner
           git commit -m 'Formatting changes'
           git push -u origin formatted
