I have made a widget that passes data

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,19 +33,20 @@ android {
     namespace 'io.vikunja.flutteringvikunja'
     //compileSdkVersion flutter.compileSdkVersion
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     //sourceSets {
     //    main.java.srcDirs += 'src/main/kotlin'
    // }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = 17
     }
 
     defaultConfig {
@@ -56,6 +57,7 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -97,11 +99,18 @@ android {
     lint {
         disable 'InvalidPackage'
     }
-
+    buildFeatures {
+        viewBinding true
+    }
 }
+
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
 //dependencies {
