--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         android:networkSecurityConfig="@xml/network_security_config"
         >
 
+        <service
+            android:name=".widget.TaskListService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <receiver android:name=".TaskWidget" android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
