Now task widget works when displaying premade data

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         >
 
         <service
-            android:name=".widget.TaskListService"
+            android:name=".TaskListService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <receiver android:name=".TaskWidget" android:exported="false">
