--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config"
         >
-        <receiver android:name="."
+    <receiver android:name=".AppWidgetReciever"
           android:exported="true">
             <intent-filter>
             <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
