--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
     implementation "androidx.glance:glance:1.1.1"
     implementation "androidx.glance:glance-appwidget:1.1.1"
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 //dependencies {
