--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -53,21 +53,21 @@ jobs:
           keyPropFile=key.properties
           gpg -d --passphrase "$GPG_PASS" --batch $keyPropFile.asc > $keyPropFile
           
-      - name: Decrypting Fastlane Secret file
-        env:
-          GPG_PASS: ${{ secrets.GPG_PASS }}
-        run: |
-          cd android/
-          file=fastlane-secret.json
-          gpg -d --passphrase "$GPG_PASS" --batch $file.asc > $file
-
-      - name: Testing Fastlane installation
-        run: |
-          pwd
-          cd android
-          bundle update fastlane
-          bundle exec fastlane run validate_play_store_json_key
-
+      # - name: Decrypting Fastlane Secret file
+      #   env:
+      #     GPG_PASS: ${{ secrets.GPG_PASS }}
+      #   run: |
+      #     cd android/
+      #     file=fastlane-secret.json
+      #     gpg -d --passphrase "$GPG_PASS" --batch $file.asc > $file
+      #
+      # - name: Testing Fastlane installation
+      #   run: |
+      #     pwd
+      #     cd android
+      #     bundle update fastlane
+      #     bundle exec fastlane run validate_play_store_json_key
+      #
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
