--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     </receiver>
     <service android:name="es.antonborri.home_widget.HomeWidgetBackgroundService"
         android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
-    <receiver android:name=".AppWidgetReciever"
+    <receiver android:name=".widget.AppWidgetReciever"
           android:exported="true">
             <intent-filter>
             <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
