--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,6 +116,7 @@ flutter {
 }
 
 dependencies {
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
     implementation "androidx.glance:glance:1.1.1"
     implementation "androidx.glance:glance-appwidget:1.1.1"
