--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,11 @@ dependencies:
   package_info_plus: ^8.2.1
   html_editor_enhanced: ^2.6.0
   sentry_flutter: ^8.9.0
-  home_widget: ^0.8.0
+  home_widget:
+    git:
+      url: https://github.com/ABausG/home_widget
+      path: packages/home_widget
+      ref: main
 
 dependency_overrides:
   flutter_inappwebview:
