--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ dependencies:
   flutter_timezone: ^4.1.0
   flutter_typeahead: ^5.2.0
   flutter_widget_from_html: ^0.17.1
-  home_widget: ^0.8.0
+  home_widget: # Recent fix for background tasks for Android version >14
+    git:
+      url: https://github.com/ABausG/home_widget
+      path: packages/home_widget
+      ref: master
   html_editor_enhanced: ^2.6.0
   intl: ^0.20.2
   meta: ^1.11.0
